added/replaced tests for JunitListener, JunitMetaDataExtractor, JUnitTestResultConstructor